| Summary: | ASTERISK-20464: Can't join ConfBridge() with video | ||
| Reporter: | Leif Madsen (lmadsen) | Labels: | |
| Date Opened: | 2012-09-24 08:53:31 | Date Closed: | 2012-09-24 09:27:19 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Applications/app_confbridge |
| Versions: | 11.0.0-beta2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) permissive-h264.diff | |
| Description: | When attempting to join a conference bridge (ConfBridge()) with video support from jitsi, the call is rejected by jitsi saying the session description is invalid. It appears this line in the 200 OK is invalid: a=rtpmap:96 /0 | ||
| Comments: | By: Leif Madsen (lmadsen) 2012-09-24 08:54:39.503-0500 {noformat} <--- SIP read from UDP:172.16.0.195:5060 ---> INVITE sip:602@172.16.0.152 SIP/2.0 Call-ID: c831bdc03096733a2196500c44f6ef65@0:0:0:0:0:0:0:0 CSeq: 2 INVITE From: "0000FFFF0001" <sip:0000FFFF0001@172.16.0.152>;tag=41600faa To: <sip:602@172.16.0.152> Max-Forwards: 70 Contact: "0000FFFF0001" <sip:0000FFFF0001@172.16.0.195:5060;transport=udp;registering_acc=172_16_0_152> User-Agent: Jitsi1.1-nightly.4211Linux Content-Type: application/sdp Via: SIP/2.0/UDP 172.16.0.195:5060;branch=z9hG4bK-373734-d1fabe15891a389e883a0a67a7e20385 Authorization: Digest username="0000FFFF0001",realm="asterisk",nonce="719ed936",uri="sip:602@172.16.0.152",response="f0972e8bc0dfe0648c08af313b267859",algorithm=MD5 Content-Length: 742 v=0 o=0000FFFF0001 0 0 IN IP4 172.16.0.195 s=- c=IN IP4 172.16.0.195 t=0 0 m=audio 5032 RTP/AVP 9 0 8 3 a=rtpmap:9 G722/8000 a=rtpmap:0 PCMU/8000 a=rtpmap:8 PCMA/8000 a=rtpmap:3 GSM/8000 a=extmap:1 urn:ietf:params:rtp-hdrext:csrc-audio-level a=zrtp-hash:1.10 dbee20aa6a083042dad6b51c000e1fa4451dd578c2849a8f0e858377d823e2d5 m=video 5034 RTP/AVP 96 99 a=recvonly a=rtpmap:96 H264/90000 a=fmtp:96 profile-level-id=4DE01f;packetization-mode=1 a=imageattr:96 send [x=[0-160],y=[0-100]] recv [x=[0-1920],y=[0-1080]] a=rtpmap:99 H264/90000 a=fmtp:99 profile-level-id=4DE01f a=imageattr:99 send [x=[0-160],y=[0-100]] recv [x=[0-1920],y=[0-1080]] a=zrtp-hash:1.10 05b26541603785fb2b26cc19bf66c35fe1bbeaab533a54ed2a9437819b20e866 <-------------> --- (12 headers 21 lines) --- Sending to 172.16.0.195:5060 (no NAT) Using INVITE request as basis request - c831bdc03096733a2196500c44f6ef65@0:0:0:0:0:0:0:0 Found peer '0000FFFF0001' for '0000FFFF0001' from 172.16.0.195:5060 == Using SIP RTP CoS mark 5 Found RTP audio format 9 Found RTP audio format 0 Found RTP audio format 8 Found RTP audio format 3 Found audio description format G722 for ID 9 Found audio description format PCMU for ID 0 Found audio description format PCMA for ID 8 Found audio description format GSM for ID 3 Found RTP video format 96 Found RTP video format 99 Found video description format H264 for ID 96 Found video description format H264 for ID 99 Capabilities: us - (gsm|ulaw|alaw|g722|h264), peer - audio=(gsm|ulaw|alaw|g722)/video=(nothing)/text=(nothing), combined - (gsm|ulaw|alaw|g722) Non-codec capabilities (dtmf): us - 0x1 (telephone-event|), peer - 0x0 (nothing), combined - 0x0 (nothing) Peer audio RTP is at port 172.16.0.195:5032 Peer video RTP is at port 172.16.0.195:5034 Looking for 602 in LocalSets (domain 172.16.0.152) list_route: hop: <sip:0000FFFF0001@172.16.0.195:5060;transport=udp;registering_acc=172_16_0_152> ----- snip ------ -- Executing [conference@LocalSets:3] ConfBridge("SIP/0000FFFF0001-00000024", "primary,,,volume_ctrl_menu") in new stack Audio is at 12964 Video is at 172.16.0.152:21528 Adding codec 100012 (g722) to SDP Adding codec 100003 (ulaw) to SDP Adding codec 100004 (alaw) to SDP Adding codec 100002 (gsm) to SDP Adding video codec 200004 (unknown) to SDP <--- Reliably Transmitting (no NAT) to 172.16.0.195:5060 ---> SIP/2.0 200 OK Via: SIP/2.0/UDP 172.16.0.195:5060;branch=z9hG4bK-373734-d1fabe15891a389e883a0a67a7e20385;received=172.16.0.195 From: "0000FFFF0001" <sip:0000FFFF0001@172.16.0.152>;tag=41600faa To: <sip:602@172.16.0.152>;tag=as033212ea Call-ID: c831bdc03096733a2196500c44f6ef65@0:0:0:0:0:0:0:0 CSeq: 2 INVITE Server: Asterisk PBX SVN-trunk-r372808 Allow: INVITE, ACK, CANCEL, OPTIONS, BYE, REFER, SUBSCRIBE, NOTIFY, INFO, PUBLISH Supported: replaces, timer Contact: <sip:602@172.16.0.152:5060> Content-Type: application/sdp Content-Length: 381 v=0 o=root 1575016428 1575016428 IN IP4 172.16.0.152 s=Asterisk PBX SVN-trunk-r372808 c=IN IP4 172.16.0.152 b=CT:384 t=0 0 m=audio 12964 RTP/AVP 9 0 8 3 a=rtpmap:9 G722/8000 a=rtpmap:0 PCMU/8000 a=rtpmap:8 PCMA/8000 a=rtpmap:3 GSM/8000 a=ptime:20 a=sendrecv m=video 21528 RTP/AVP 96 a=rtpmap:96 /0 a=fmtp:96 profile-level-id=4DE01F;packetization-mode=1 a=sendrecv {noformat} By: Joshua C. Colp (jcolp) 2012-09-24 09:27:19.607-0500 Fixed in 11 as of revision 373413 and trunk as of revision 373414. | ||